--- a/starter/04-CSS-Layouts/styles.css
+++ b/starter/04-CSS-Layouts/styles.css
@@ -197,8 +197,8 @@ nav a:link {
 
   display: block; */
 
-  margin-right: 30px;
-  margin-top: 10px;
+  /* margin-right: 30px; */
+  /* margin-top: 10px; */
   display: inline-block;
 }
 
@@ -268,7 +268,7 @@ nav p {
 } */
 
 /* FLOATS */
-h1 {
+/* h1 {
   float: left;
 }
 
@@ -293,4 +293,45 @@ aside {
 
 footer {
   clear: both;
+} */
+
+/* FLEXBOX */
+
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author {
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
 }
